# DOCUMENT_OCR_REVIEWER

./: .gitignore  README.md  blegacy.html  ocr_checker.py  pyproject.toml  requirements.txt  rnc.html  run_ocr.sh
modules/: __init__.py  bbox_utils.py  device.py  engines.py  error_analyzer.py  ocr_extractor.py  pdf_rasterizer.py  report_generator.py  sentence_assembler.py
templates/: report.html.jinja
tests/: test_analyzer.py
