[project]
name = "ocr-error-detector"
version = "0.1.0"
description = "Detects typos, inconsistent sentences, and hard-to-read characters in PDFs, scoring each sentence with a bounding box."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdf2image>=1.16.3",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "pyspellchecker>=0.8.1",
    "language-tool-python>=2.7.1",
    "reportlab>=4.0.0",
    "jinja2>=3.1.2",
]

[project.scripts]
ocr-checker = "ocr_checker:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
# GPU engines. Install a CUDA build of torch from the PyTorch index, e.g.:
#   uv sync --extra gpu
#   uv pip install torch --index-url https://download.pytorch.org/whl/cu121
gpu = [
    "torch>=2.2.0",
    "easyocr>=1.7.1",
]
# TrOCR transformer engine (handwriting). Pulls in gpu deps + HF transformers.
transformer = [
    "torch>=2.2.0",
    "easyocr>=1.7.1",
    "transformers>=4.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modules"]
only-include = ["modules", "ocr_checker.py", "templates"]

[tool.pytest.ini_options]
testpaths = ["tests"]
